# OOP

./: 1.py  CMakeLis.txt  CMakeLists.txt
include/: bit_counter.h
lab1/: CMakeLists.txt
lab1/include/: bit_counter.h
lab1/src/: bit_counter.cpp  main.cpp
lab1/tests/: test_bit_counter.cpp
src/: bit_counter.cpp  main.cpp
tests/: test_bit_counter.cpp
